--- a/demo1/pom.xml
+++ b/demo1/pom.xml
@@ -43,6 +43,16 @@
     <artifactId>jedis</artifactId>
     <version>3.6.0</version>
 </dependency>
+<dependency>
+	<groupId>org.springframework.boot</groupId>
+	<artifactId>spring-boot-starter-amqp</artifactId>
+</dependency>
+
+<dependency>
+	<groupId>org.springframework.amqp</groupId>
+	<artifactId>spring-rabbit-test</artifactId>
+	<scope>test</scope>
+</dependency>
 
 
 	</dependencies>
