--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,5 +1,20 @@
 {
     "configurations": [
+        
+        {
+            "type": "java",
+            "name": "Launch JDBCTest",
+            "request": "launch",
+            "mainClass": "main.java.com.mybatistest.JDBCTest",
+            "projectName": "db"
+        },
+        {
+            "type": "java",
+            "name": "Launch App",
+            "request": "launch",
+            "mainClass": "com.mybatistest.App",
+            "projectName": "db"
+        },
         {
             "type": "java",
             "name": "Launch MessagingRabbitmqApplication",
