--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,6 +1,17 @@
 {
     "configurations": [
-        
+        {
+            "type": "java",
+            "name": "Launch JDBCTest",
+            "request": "launch",
+            "mainClass": "main.java.com.mybatistest.JDBCTest"
+        },
+        {
+            "type": "java",
+            "name": "Launch App",
+            "request": "launch",
+            "mainClass": "com.mybatistest.App"
+        },
         {
             "type": "java",
             "name": "Launch JDBCTest",
